# client-to-host-to-esp-base

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  client.sh  docker-compose.yml  flash.sh  host.sh  launcher.sh  pyproject.toml  run.py
app/api/: routes.py
app/client/: esp_manager.py  runtime.py  store.py
app/host/: runtime.py  store.py
app/models/: config.py  messages.py  tables.py
base/api/: routes.py
base/api/static/: index.html
base/client/: __init__.py  state.py
base/comms/: __init__.py  heartbeat.py  messages.py  mqtt.py  topics.py
base/config/: __init__.py  models.py
base/db/: sqlite.py
base/esp/: __init__.py  flash.py  handshake.py  protocol.py  registry.py  serial.py  udev.py
base/host/: __init__.py  state.py
base/service/: __init__.py  remote.py  systemd.py
config/: client.toml  host.toml
esp/: CMakeLists.txt  firmware.c  sdkconfig.defaults  sdkconfig.old
esp/main/: CMakeLists.txt
scripts/: service.py
